# bridge-cli

./: .gitmodules  Cargo.toml  example-config.yaml
bindings/: Cargo.toml
bindings/src/: address.rs  address_upgradeable.rs  blake_3_sol.rs  byte_strings.rs  console.rs  console_2.rs  ed_25519.rs  erc1155_upgradeable.rs  erc1967_proxy.rs  i_themelio_bridge.rs  sha_512.rs  std_error.rs  std_math.rs  std_storage.rs  storage_slot.rs  storage_slot_upgradeable.rs  strings.rs  themelio_bridge.rs  themelio_bridge_proxy.rs
src/: cli.rs  main.rs  readme.md  structs.rs
