[package]
name = "bridge-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.22", features = ["derive"] }
ethers = "1.0.0"
hex = "0.4.3"
melodeon = "0.5.15"
melorun = "0.7.10"
mil = "0.4.1"
serde = "1.0.147"
serde-big-array = "0.3.2"
serde_yaml = "0.9.14"
themelio-stf = "0.11.12"
themelio-structs = "0.2.0"
tmelcrypt = "0.2.6"
tokio = { version = "1", features = ["full"] }