[package]
name = "bridge-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
async-compat = "0.2.1"
bindings = { path = "./bindings" }
clap = { version = "4.0.22", features = ["derive"] }
colored = "2.0.0"
ethers = { version = "1.0.1", features = ["rustls"] }
futures = "0.3.25"
hex = "0.4.3"
melnet2 = "0.1.8"
melodeon = "0.5.15"
melorun = "0.7.10"
mil = "0.4.1"
once_cell = "1.16.0"
rayon = "1.6.0"
serde = "1.0.147"
serde_json = "1.0.87"
serde_yaml = "0.9.14"
smol = "1.2.5"
tabwriter = "1.2.1"
themelio-bootstrap = "0.7.2"
themelio-nodeprot = "0.12.1"
themelio-stf = "0.11.12"
themelio-structs = "0.2.0"
tmelcrypt = "0.2.6"